--- a/README
+++ b/README
@@ -71,6 +71,9 @@ Built-in commands are:
     (including from excluding to).
   S     (suffix: string from -> substr)
     Like substr, but assumes to is the end of the string.
+  m     (map: string [from to ...]{n} n -> string)
+    Maps each occurance of from to to in the string, left to right. Replaced
+    text is not subject to replacement.
   +     (add: a b -> (a+b))
   -     (sub: a b -> (a-b))
   *     (mul: a b -> (a*b))
@@ -129,6 +132,14 @@ Built-in commands are:
     Pushes the contents of register C to the stack.
   RC    (write: string -> ())
     Pops the top stack value into register C.
+  p     (stash: () -> <undefined>)
+    Pushes all registers onto the stack. The method in which this is done is
+    undefined.
+  P     (retrieve: <undefined> -> ())
+    Pops all registers from the stack, undoing a "p". The method in which this
+    is is done is undefined.
+  z     (stash-retrieve: code -> code)
+    Places a "p" at the beginning of code, and a "P" at the end.
   "..." (string: ??? -> string)
     Pushes an interpolated string to the stack. The following characters are
     considered special:
@@ -179,8 +190,9 @@ Built-in commands are:
   h     (history-access: [off] -> ())
     Expends to the history at the given offset. If the stack is empty when
     trying to read off, assume 0.
-  v     (save-code: code -> ???)
-    Appends the given code to the user's library after executing it.
+  v     (save-code: name code -> ???)
+    Creates a defun statement with the given name and code, executes it, then
+    appends it to the user's library.
   VC    (save-code-contextual: code -> ???)
     Like v, but the character C is read, which must be s or e. The written code
     is prefixed by context statements to limit any definition to this context
@@ -206,7 +218,13 @@ Quickly generate case statements for each digit:
   9("`case '$i':\n".)F
 
 Save the previous to a language-specific macro:
-  "nc"hDVe
+  "nc"hzVe
 
 Resusing the new macro:
   _nc
+
+Creating a macro to place strings into C-strings (quoting and escaping):
+  @=.h @|.c
+  "cq" (\\(\\)\n(\n)\r(\r)\t(\t)\"(\")\e(\e)\f(\f)\v(\v)8m"\"%\"") D
+Note that the contexts will match ANY context containing ".h" or ".c" anywhere,
+not just ending in those names.
