--- a/README
+++ b/README
@@ -27,8 +27,8 @@ TGL code is executed in sequence. Some commands will modify the input pointer,
 giving the illusion of deeper structure. Most commands operate only on strings
 at the top of the primary stack. Whitespace is ignored on execution.
 
-Integers follow the format
-  [+-]?([0-9]+|0x[0-9]+)
+Integers follow the format (not case-sensitive):
+  [+-]?([0-9]+|0x[0-9A-F]+|0o[0-7]+|0b[01]+)
 
 A boolean is true if it is a non-empty string which is not equal to any
 representation of integer zero.
