--- a/README
+++ b/README
@@ -207,6 +207,13 @@ Built-in commands are:
     is prefixed by context statements to limit any definition to this context
     (s) or file type (e).
 
+VARIABLE PERSISTENCE
+
+TGL can save the values within registers across invocations. By default, these
+data are stored in ~/.tgl_registers. Whenever TGL exits successfully, the
+status of these registers is written to this file. The contents of this file is
+not defined and is architecture- (and theoretically compiler-) specific.
+
 EXAMPLES
 
 Hello world:
