--- a/README
+++ b/README
@@ -332,13 +332,17 @@ Payload commands:
     Pushes the current value of property VV (see above).
   ,s    (payload-space-delimited: () -> ())
     Sets payload to be delimited by whitespace of any kind, combination, and
-    amount. Resets balance and trim properties to defaults.
+    amount. Resets balance and trim properties to defaults. If this mode is in
+    use when payload is first extracted (or with ,!), leading space in the
+    payload is skipped.
   ,0    (payload-nul-delimited: () -> ())
     Sets the NUL character as the sole delimiter for payload data, and sets all
     balance and trim properties to false.
   ,l    (payload-line-delimited: () -> ())
     Sets the "\n", "\r", and "\r\n" as value delimeters, and sets all
-    paren-related balancing and trimming to false.
+    paren-related balancing and trimming to false. If this mode is in use when
+    the payload is first extracted (or with ,!), leading line feeds in the
+    payload are skipped.
   ,f    (payload-from-file: filename -> ())
     Sets the payload data to the contents of the given file.
   ,F    (payload-from-glob: glob -> ())
