Correct typo in README.

--- a/README
+++ b/README
@@ -335,7 +335,7 @@ Payload commands:
         true for all but angles (t<).
       ts (trim-space)
         Like the above, but trims all whitespace. Default true.
-  /?VV  (payload-get-property: () -> value)
+  ,?VV  (payload-get-property: () -> value)
     Pushes the current value of property VV (see above).
   ,s    (payload-space-delimited: () -> ())
     Sets payload to be delimited by whitespace of any kind, combination, and
