--- a/README
+++ b/README
@@ -139,6 +139,8 @@ Built-in commands are:
     is assumed to be an integer indicating the stack height below the first
     argument (the string to map). Otherwise, the number of pairs to map must be
     provided as a normal argument.
+    Example:
+      "hello world" u. "hello" "Hallo," "world" "Welt!" m. --> Hallo, Welt!
   +     (add: a b -> (a+b))
   -     (sub: a b -> (a-b))
   *     (mul: a b -> (a*b))
@@ -284,6 +286,8 @@ Built-in commands are:
     will be used. The first argument is the command to run. No additional
     processing is performed on the arguments given: They are passed to the
     program verbatim.
+    Example:
+      yu."echo" "hello" "world"B.  --> hello world
   r...  (sed: input -> output, or input script -> output)
     Executes "sed -r" on the given input, pushing the output onto the stack. The
     script follows this extended regex:
@@ -476,4 +480,4 @@ Resusing the new macro:
 
 Creating a macro to place strings into C-strings (quoting and escaping):
   @=*.h @|*.c
-  "cq" (\\(\\)\n(\n)\r(\r)\t(\t)\"(\")\e(\e)\f(\f)\v(\v)8m"\"%\"") D
+  "cq" (u.\\(\\)\n(\n)\r(\r)\t(\t)\"(\")\e(\e)\f(\f)\v(\v)m"\"%\"") D
